objects/chargebeeapps__CB_Credit_Note__c.object
<CustomObject>
    <description>Chargebee&apos;s Credit note details and its allocations to Invoices</description>
    <fields>
        <fullName>chargebeeapps__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CB Credit Notes</relationshipLabel>
        <relationshipName>CB_Credit_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Allocated_Amount__c</fullName>
        <label>Allocated Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Available_Amount__c</fullName>
        <description>Remaining available amount</description>
        <inlineHelpText>Remaining available amount</inlineHelpText>
        <label>Available Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__CB_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Site</label>
        <referenceTo>chargebeeapps__CB_Sites__c</referenceTo>
        <relationshipLabel>CB Credit Notes</relationshipLabel>
        <relationshipName>CB_Credit_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact associated with this credit note</description>
        <inlineHelpText>Contact associated with this credit note</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CB Credit Notes</relationshipLabel>
        <relationshipName>CB_Credit_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Invoice__c</fullName>
        <description>Credit note is generated from this Invoice</description>
        <inlineHelpText>Credit note is generated from this Invoice</inlineHelpText>
        <label>CB Invoice</label>
        <referenceTo>chargebeeapps__CB_Invoice__c</referenceTo>
        <relationshipLabel>CB Credit Notes</relationshipLabel>
        <relationshipName>CB_Credit_Notes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Issued_Date__c</fullName>
        <description>Credit note issued date</description>
        <inlineHelpText>Credit note issued date</inlineHelpText>
        <label>Issued Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Price_Type__c</fullName>
        <description>Is tax inclusive or exclusive?</description>
        <inlineHelpText>Is tax inclusive or exclusive?</inlineHelpText>
        <label>Price Type</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Reason_Code__c</fullName>
        <description>Reason - why this credit note generated?</description>
        <inlineHelpText>Reason - why this credit note generated?</inlineHelpText>
        <label>Reason</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Refunded_Amount__c</fullName>
        <label>Refunded Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Refunded_At__c</fullName>
        <description>Credit note refunded date</description>
        <inlineHelpText>Credit note refunded date</inlineHelpText>
        <label>Refunded At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Round_Off_Amount__c</fullName>
        <label>Round-Off Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Site__c</fullName>
        <label>Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Status__c</fullName>
        <description>Status of the Credit note</description>
        <inlineHelpText>Status of the Credit note</inlineHelpText>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Sub_Total__c</fullName>
        <description>Credite note - Sub total</description>
        <inlineHelpText>Credite note - Sub total</inlineHelpText>
        <label>Sub Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Total__c</fullName>
        <description>Credit note value</description>
        <inlineHelpText>Credit note value</inlineHelpText>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Type__c</fullName>
        <description>Credit note type</description>
        <label>Type</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Voided_At__c</fullName>
        <description>Credit note voided at</description>
        <inlineHelpText>Credit note voided at</inlineHelpText>
        <label>Voided At</label>
        <type>DateTime</type>
    </fields>
    <label>CB Credit Note</label>
    <listViews>
        <fullName>chargebeeapps__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CB Credit Note Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Credit Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>